modified package with proxy:3000 and start:PORT=4000

--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "phase-4-deploying-app-demo",
+  "proxy": "http://localhost:3000",
   "description": "Build scripts for Heroku",
   "engines": {
     "node": "16.x"
   },
   "scripts": {
+    "start": "PORT=4000 react-scripts start",
     "build": "npm install --prefix client && npm run build --prefix client",
     "clean": "rm -rf public",
     "deploy": "cp -a client/build/. public/",
     "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.2.0"
   }
 }
